# gene-expression-agent

./: .env.chat  .env_example.agent  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  Dockerfile  Dockerfile.package  README.md  REPORT.md  compose.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  conventional-commits.yml
src/mcp_server/: __main__.py  app.py  constants.py  dataset.py  mcp.py
tests/: test_agent_responses.py  test_dataset.py  test_widget_compat.py
ui/: Dockerfile  README.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
ui/scripts/: export_openapi.py  mock-server.mjs
ui/src/: App.tsx  index.css  main.tsx  plotly.d.ts
ui/src/api/: client.ts  openapi.json  schema.d.ts
ui/src/components/: ChatInput.tsx  MessageContent.tsx  MessageList.tsx
ui/src/components/widgets/: AskPopup.tsx  Chart.tsx  SelectionAsk.tsx  Table.tsx  Thought.tsx  ThoughtGroup.tsx
ui/src/hooks/: useChat.ts  useSession.ts  useSessionId.ts  useShowThoughts.ts  useShowThreads.ts  useTheme.ts  useThreads.ts
ui/src/test/: accessibility.test.tsx  app-accessibility.test.tsx  contrast.test.ts  fixtures.ts  handlers.ts  setup.ts
ui/src/types/: jest-axe.d.ts  vitest-matchers.d.ts
