[project]
name = "mcp-server"
version = "0.3.0"
description = "MCP tool definitions"
readme = "README.md"
authors = [
    { name = "Mahdi Lamb", email = "mahdilamb@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.2.3",
    "loguru>=0.7.3",
    "pandas>=2.2.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "uvicorn[standard]>=0.44.0",
]

[project.scripts]
mcp-server = "mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["packages/*", "santander-finder"]

[tool.uv.sources]
agent = { workspace = true }


[tool.ruff]
target-version = "py313"
extend-exclude = ["**/migrations"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["mcp_server", "agent"]

[tool.pytest.ini_options]
testpaths = ["tests", "packages/*/tests"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
markers = [
    "requires_api_key: test requires ANTHROPIC_API_KEY to be set",
]

[dependency-groups]
dev = [
    "fakeredis>=2.35.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
    "ty>=0.0.34",
]
